tests/basic/infer/eq/100.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f100 : {v:unit|?}
f100 = 
  let p = eq 1 2 in 
  assert p

f101 : {v:unit|?}
f101 = 
  let x = 1 in
  let p = eq x 2 in 
  assert p

